# dotfiles

./: .bash_functions  .bashrc  .gitignore  .tmux.conf  .vimrc  .vimrc_leader.vim  .vimrc_mappings.vim  .vimrc_plugins.vim  .vimrc_settings.vim  Makefile  README.md  distribute.sh  makesymlinks.sh  readme.txt  setup.sh
.config/nvim/: init.vim
.config/nvim/lua/user/: copilot.lua  keymaps.lua  options.lua  packer.lua  plugins.lua
.config/nvim/lua/user/lsp/: null-ls.lua
.config/nvim/plugin/: packer_compiled.lua
.config/nvim/rplugin/python3/: plug.py
.config/sway/: config
.config/waybar/: config  style.css
.ftplugin/: c.vim  javascript.vim  markdown.vim  python.vim  typescript.vim
.snippets/.python/: .pyclass.py
bash/: .bash_functions  .bash_profile  .bashrc
gdb/: .gdbinit
git/: .gitconfig
git/.git-templates/hooks/: pre-commit
i3/.config/i3/: config
kitty/.config/kitty/: ssh.conf
nvim/.config/nvim/: init.lua  lazy-lock.json
nvim/.config/nvim/lua/config/: keymaps.lua  lazy.lua  options.lua
nvim/.config/nvim/lua/config/plugins/: blink.lua  bufferline.lua  colorscheme.lua  lsp.lua  telescope.lua  treesitter.lua
nvim/.config/nvim/lua/user/: options.lua  packer.lua  plugins.lua
nvim/.config/nvim/rplugin/python3/: plug.py
scripts/python/llm_cli/: llm_cli.py  pyproject.toml
scripts/python/music_downloader/: music_downloader.py  pyproject.toml
swappy/.config/swappy/: config
sway/.config/sway/: config
tmux/: .tmux.conf
