[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-downloader"
version = "1.0.0"
description = "Quick LLM CLI tool to download music from youtube"
requires-python = ">=3.8"
dependencies = [
]

[project.scripts]
music_downloader = "music_downloader:main"
